# spine-vision

./: .gitignore  AGENTS.md  README.md  config.py  convert.py  preprocess.py  pyproject.toml  visualize.py
.github/workflows/: ci.yml  deps.yml
docs/dependencies/: DEPENDENCIES.md
notebooks/: analysis_classification_dataset.ipynb  compare_crop_modes.ipynb  test_localization_model.ipynb  test_middle_slice.ipynb
spine_vision/: __init__.py
spine_vision/cli/: __init__.py  analyze.py  evaluate.py  test.py  train.py  visualize.py
spine_vision/core/: __init__.py  config.py  logging.py  pipeline.py  tasks.py
spine_vision/datasets/: __init__.py  base.py  classification.py  image_processing.py  ivd_coords.py  labels.py  levels.py  localization.py  nnunet.py  phenikaa.py  source_processors.py
spine_vision/datasets/classification/: __init__.py  config.py  cropping.py  phenikaa.py  recovery.py  spider.py
spine_vision/datasets/phenikaa/: __init__.py  matching.py  ocr.py
spine_vision/inference/: __init__.py  base.py  cropping.py  localization.py  segmentation.py
spine_vision/io/: __init__.py  pdf.py  readers.py  rsna.py  tabular.py  transforms.py  writers.py
spine_vision/labels/: __init__.py  mapping.py
spine_vision/labels/schemas/: spider.yaml
spine_vision/matching/: __init__.py  fuzzy.py  patient.py
spine_vision/ocr/: __init__.py  detection.py  extraction.py  recognition.py
spine_vision/training/: __init__.py  base.py  heads.py  losses.py  metrics.py  registry.py  visualization.py
spine_vision/training/datasets/: __init__.py  classification.py  ivd_coords.py  localization.py  sampling.py  stratification.py
spine_vision/training/models/: __init__.py  backbone.py  base.py  convnext.py  generic.py  resnet_mtl.py  vit.py
spine_vision/training/trainers/: __init__.py  base.py  classification.py  localization.py
spine_vision/visualization/: __init__.py  base.py  classification.py  dataset.py  localization.py  plotly_viewer.py  training.py  visualizer.py
